# DEDS_repository

./: pyproject.toml
Opdrachten/Week 1/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  go_sales_train.sqlite  go_staff_train.sqlite
Opdrachten/Week 10/: Unsupervised Clustering.ipynb
Opdrachten/Week 12/Neuraal Netwerk/: test.py
Opdrachten/Week 13/: Kaggle_oprdacht.ipynb
Opdrachten/Week 13 (Ging fout))/: Kaggle opdracht.ipynb  Students_Grading_Dataset.csv
Opdrachten/Week 5+ Project/: Project meewerken.ipynb
Opdrachten/Week 5+ Project/Hulpmiddelen/: NorthWind.txt  aenc.sqlite
Opdrachten/Week 8/: Regression Model.ipynb
Opdrachten/Week 9/: Classification Model.ipynb
Opdrachten/Week3/: DEDS_sterschema.ipynb  sterschema.vpp  sterschema.vpp.bak_000f  sterschema.vpp.bak_001d  sterschema.vpp.bak_002d  sterschema.vpp.bak_003d  sterschema.vpp.bak_004d  sterschema.vpp.bak_005d  sterschema.vpp.bak_006d  sterschema.vpp.bak_007d
Opdrachten/Week3/sterschema/: sterschema.vpp  sterschema.vpp.bak_001d  sterschema.vpp.bak_002d  sterschema.vpp.bak_003d  sterschema.vpp.bak_004d  sterschema.vpp.bak_005d  sterschema.vpp.bak_006d  sterschema.vpp.bak_007d  sterschema.vpp.bak_008d  sterschema.vpp.bak_009d  sterschema.vpp.bak_010d  sterschema.vpp.bak_011d  sterschema.vpp.bak_012d  sterschema.vpp.bak_013d  sterschema.vpp.bak_014d  sterschema.vpp.bak_015d  sterschema.vpp.bak_016d  sterschema.vpp.bak_017d
Opdrachten/Week4/: DEDS-WC-4.3 & -4.3.ipynb
Opdrachten/week2/: DEDS_WC_2.2.ipynb
(+48 files in other folders)
